fix(demos): Too much space between toolbar title and left icon.
Remove unnecessary styles and make demo page look better.

--- a/demos/common.scss
+++ b/demos/common.scss
@@ -79,7 +79,6 @@ fieldset {
 
 .catalog-logo,
 .catalog-back {
-  padding-right: 24px;
   color: #eee;
   text-decoration: none;
 }
